--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.462.0",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "lucide-react": "^0.462.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
