--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.4.2",
     "next": "14.2.16",
     "next-themes": "^0.4.3",
+    "rate-limit": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "winston": "^3.17.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,7 +29,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
-    "lucide-react": "^0.462.0",
+    "lucide-react": "^0.474.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
