--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   web:
     build:
@@ -9,20 +11,46 @@ services:
       - NODE_ENV=production
       - TWENTY_CRM_URL=${TWENTY_CRM_URL}
       - TWENTY_API_KEY=${TWENTY_API_KEY}
-      - REDIS_URL=redis://redis:6389
-      - TWENTY_CRM_URL="http://localhost:3000"
-      - TWENTY_API_KEY="paste_your_key_here"
+      - REDIS_URL=redis://redis:6379
+    env_file:
+      - .env.production
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
 
   redis:
     image: redis:alpine
     ports:
-      - "6389:6379"
+      - "6379:6379"
     volumes:
       - redis_data:/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+    command: redis-server --appendonly yes
 
 volumes:
   redis_data:
+    driver: local
