--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.16",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "ioredis": "^5.4.2",
     "next": "14.2.16",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.4.3",
     "rate-limit": "^0.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "reading-time": "^1.5.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "winston": "^3.17.0",
